--- a/index.html
+++ b/index.html
@@ -3,48 +3,28 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<meta name="description" content="An awesome coming soon page designed by Orman Clark and coded by João Sardinha" />
-<meta name="keywords" content="coming, soon, page, orman, clark, john, sardine, johnsardine, download" />
+<meta name="description" content="Technology Consulting for Startups" />
+<meta name="keywords" content="consulting, consultancy, startup, startups, technology, tech" />
 
-<title>Coming Soon Splash Page CSS3</title>
+<title>Technology Consulting for Startups</title>
 
-<link rel="stylesheet" href="style.css">
+<meta property="og:title" content="innotech.io - Technology Consulting for Startups" />
+<meta property="og:type" content="company" />
+<meta property="og:site_name" content="innotech.io - Technology Consulting for Startups" />
+<meta property="og:description" content="We help early stage startups with all things technolgoy related; from roadmaps, API design, tech stack architecture, technical interviews and more.
 
-<style type="text/css">
-/*
-This was coded by João Sardinha
-Visit me at http://johnsardine.com/
-
-It has been tested in all modern browsers.
-
-This coming soon page design has been created by the awesome Orman Clark,
-you can download a PSD version of this at his website, PremiumPixels.
-http://www.premiumpixels.com/freebies/coming-soon-splash-page-psd/
-*/
-</style>
+Consider us your temporary CTO." />
+<meta property="og:url" content="www.innotech.io" />
+<meta property="og:image" content="" />
 
 </head>
 
 <body>
 
-<div id="coming-soon">
-
-<h1>AwesomeStuff</h1>
-
-<p>This marvelous coming soon page has been created by the awesome <a href="http://premiumpixels.com/" title="" target="_blank">Orman Clark</a> and coded by <a href="http://johnsardine.com/" title="" target="_blank">João Sardinha</a>.</p>
-<p>Press <a href="http://johnsardine.com/get/coming-soon-page.zip" title="">here</a> to download a .zip containing what you need to setup this beautiful page.</p>
-
-<form method="post">
-	<div id="subscribe">
-		<input type="text" placeholder="enter your email address...">
-		<input type="submit" value="Submit">
-		<div class="clear"></div>
-	</div>
-</form>
-
-<a href="http://twitter.com/#!/JohnSardine" title="Visit JohnSardine on Twitter" class="twitter center">JohnSardine</a>
-
-</div>
+<!-- Begin LaunchRock Widget -->
+<div id="lr-widget" rel="43OMTSW7"></div>
+<script type="text/javascript" src="//ignition.launchrock.com/ignition-current.min.js"></script>
+<!-- End LaunchRock Widget -->
 
 </body>
 </html>
